[tool.poetry]
name = "calendar"
version = "0.1.0"
description = ""
authors = ["Adam Beret Manczuk <beret@hipisi.org.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
#flet = {path = "../flet/sdk/python/packages/flet", develop = true}
#flet-django = {path = "../flet-django", develop = true}
flet = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

